--- a/packages/core/src/sass/app/_common/layout/footer.scss
+++ b/packages/core/src/sass/app/_common/layout/footer.scss
@@ -2,13 +2,13 @@
 .server-time {
     display: inline-flex;
     align-self: center;
-    margin-right: 1em;
-    padding: 0 1em;
+    margin-right: 1rem;
+    padding: 0 1rem;
     @include typeface(--small-left-normal-black);
     color: var(--color-text-secondary);
 
     &--is-mobile {
-        padding: 0 1em 0 0;
+        padding: 0 1rem 0 0;
         margin-right: 0;
     }
 }
@@ -25,12 +25,12 @@
 /** @define network-status  */
 .network-status {
     &__wrapper {
-        height: 1.4em;
+        height: 1.4rem;
         position: relative;
 
         &--is-mobile {
             .network-status__circle {
-                margin: 0.2em 0 0.2em -0.2em;
+                margin: 0.2rem 0 0.2rem -0.2rem;
             }
         }
     }
@@ -40,9 +40,9 @@
     }
     &__circle {
         background: var(--color-surface-primary);
-        width: 1em;
-        height: 1em;
-        margin: 0.2em 1.6em;
+        width: 1rem;
+        height: 1rem;
+        margin: 0;
         border-radius: 50%;
 
         &--online {
